k8s_manifests/cloudbilling-prod_deployment.example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cloudbilling-prod
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    kubernetes.io/ingress.class: "nginx"
  name: cloud-billing-prod
spec:
  tls:
  - hosts:
    - $host
  rules:
  - host: $host
    http:
      paths:
      - backend:
          service:
            name: cloud-billing
            port: 
              number: 5000
        path: /
        pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-billing
  namespace: cloudbilling-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudbilling-prod
  template:
    metadata:
      labels:
        app: cloudbilling-prod
    spec:
      serviceAccountName: cloud-billing
      containers:
      - name: cloud-billing
        image: cuinfrastructure.azurecr.io/cloud-billing:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-billing
  namespace: cloudbilling-prod
  annotations:
    consul.hashicorp.com/service-port: "443"
    consul.hashicorp.com/service-name: "billing"
    consul.hashicorp.com/service-sync: "true"
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: cloudbilling-prod
